# Mycelia

./: .gitmodules  CMakeLists.txt
benchmarks/: Benchmarks.cpp
modules/: CMakeLists.txt
res/: CMakeLists.txt  sporadic.xml  sporadic1.xml  sporadic2.xml  sporadic3.xml  sporadic_reduced.xml
src/: CMakeLists.txt  Mycelia.cpp  Mycelia.h  MyceliaEditor.h  MyceliaModel.cpp  MyceliaModel.h  MyceliaView.cpp  MyceliaView.h
src/dsp/: DelayNetwork.cpp  DelayNetwork.h  DelayNodes.cpp  DelayNodes.h  DelayProc.cpp  DelayProc.h  DelayStore.h  DiffusionControl.cpp  DiffusionControl.h  Dispersion.cpp  Dispersion.h  DuckingCompressor.cpp  DuckingCompressor.h  EdgeTree.cpp  EdgeTree.h  EnvelopeFollower.cpp  EnvelopeFollower.h  InputNode.cpp  InputNode.h  OutputNode.cpp  OutputNode.h  Sky.cpp  Sky.h  TempoSyncUtils.h
src/gui/: DuckLevelAnimation.cpp  DuckLevelAnimation.h  FoldWindowAnimation.cpp  FoldWindowAnimation.h  NetworkGraphAnimation.cpp  NetworkGraphAnimation.h  TreePositionAnimation.cpp  TreePositionAnimation.h
src/util/: ParameterRanges.h  ProcessorChain.h  TempoSyncUtils.h  Utils.h
tests/: PluginBasics.cpp
tests/helpers/: test_helpers.h
